Gave H1 a fixed height to stop it jumping around on smaller screens

--- a/css/site.css
+++ b/css/site.css
@@ -91,6 +91,11 @@ body {
 	margin-bottom: 36px;
 }
 
+#intro h1 {
+	display: block;
+	height: 120px;
+}
+
 @keyframes colour-fade-bg {
 	100% {
 		background-color: #005083;
